--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "15672:15672"
     user: "1027:100"
     volumes:
-      - /volume1/docker/flower/rabbitmq:/var/lib/rabbitmq
+      - /volume1/docker/pyagents/rabbitmq:/var/lib/rabbitmq
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
@@ -20,10 +20,17 @@ services:
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
     volumes:
-      - /volume1/docker/flower:/data
+      - /volume1/docker/pyagents/flower:/data
     depends_on:
       - rabbitmq
     user: "1027:100"
+
+  qdrant:
+    image: qdrant/qdrant
+    ports:
+      - "6333:6333"
+    volumes:
+      - /volume1/docker/pyagents/qdrant:/data
 
   backend:
     build: .
@@ -31,6 +38,7 @@ services:
       - "9999:8000"
     depends_on:
       - rabbitmq
+      - qdrant
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
       OPENAI_API_KEY: ${OPENAI_API_KEY}
