--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   rabbitmq:
     image: rabbitmq:3-management
+    hostname: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -14,6 +15,7 @@ services:
 
   flower:
     image: mher/flower
+    hostname: flower
     command: celery flower
     ports:
       - "5555:5555"
@@ -27,13 +29,15 @@ services:
 
   qdrant:
     image: qdrant/qdrant
+    hostname: qdrant
     ports:
       - "6333:6333"
     volumes:
       - /volume1/docker/pyagents/qdrant:/data
 
   backend:
-    build: .
+    build: ./backend
+    hostname: backend
     ports:
       - "9999:8000"
     depends_on:
@@ -44,9 +48,23 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
+    volumes:
+      - /volume1/data/documents:/data/monitored
+
+  frontend:
+    image: node:18-alpine
+    hostname: frontend
+    working_dir: /app
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+    command: sh -c "npm install && npm run dev"
+    depends_on:
+      - backend
 
   worker:
-    build: .
+    build: ./backend
     command: celery -A async_tasks worker --loglevel=info
     depends_on:
       - backend
