Move files are processing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
     volumes:
-      - /volume1/data/documents:/data/monitored
+      - /volume1/data/documents/searchable:/data/monitored
 
   frontend:
     build: ./frontend
@@ -71,3 +71,5 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
+    volumes:
+      - /volume1/data/documents/searchable:/data/monitored
