--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    environment:
+      VITE_API_BASE: ${VITE_API_BASE:-http://192.168.5.200:9999}
 
   worker:
     build: ./backend
