Change embedding model and fix backend name collision

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 OPENAI_API_BASE=http://192.168.5.203:1234/v1
 OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
+OPENAI_EMBEDDING_MODEL=nomic-embed-text-v1.5
