--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_BASE=http://192.168.5.203:1234/v1
 OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
-OPENAI_EMBEDDING_MODEL=nomic-embed-text-v1.5
+OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5-embedding
+OPENAI_EMBEDDING_DIMENSIONS=768
