--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
+      USE_NNPACK: "0"
     volumes:
       - /volume1/data/documents/searchable:/data/monitored
 
@@ -73,5 +74,6 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
+      USE_NNPACK: "0"
     volumes:
       - /volume1/data/documents/searchable:/data/monitored
