--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -2,6 +2,8 @@ services:
   worker:
     build: ./worker
     command: celery -A async_tasks worker --loglevel=info
+    limits:
+      memory: 8000M
     environment:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.200:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
