Limit number of concurrent worker threads

--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -1,7 +1,7 @@
 services:
   worker:
     build: ./worker
-    command: celery -A async_tasks worker --loglevel=info
+    command: celery -A async_tasks worker --loglevel=info --concurrency=12
     deploy:
       resources:
         limits:
