--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies required for docling and various machine learning libraries
+# Install system dependencies required for Markitdown and various machine learning libraries
 # build-essential for compiling some python packages
-# libgl1 and libglib2.0-0 are often required by cv2/vision libraries used in docling
+# libgl1 and libglib2.0-0 are often required by cv2/vision libraries used in Markitdown
 RUN apt-get update && apt-get install -y \
     build-essential \
     libgl1 \
