--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -10,6 +10,6 @@ services:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.200:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
-      OPENAI_MODEL: ${OPENAI_MODEL}
+      OPENAI_MODEL: 'gpt-oss-20b'
       QDRANT_HOST: 192.168.5.200
       USE_NNPACK: "0"
