--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,4 @@
 services:
-  rabbitmq:
-    image: rabbitmq:3-management
-    hostname: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    user: "1027:100"
-    volumes:
-      - /volume1/docker/pyagents/rabbitmq:/var/lib/rabbitmq
-    environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
-      RABBITMQ_DEFAULT_VHOST: /
-
   flower:
     image: mher/flower
     hostname: flower
@@ -20,32 +6,19 @@ services:
     ports:
       - "5555:5555"
     environment:
-      CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
+      CELERY_BROKER_URL: amqp://guest:guest@192.168.5.204:5672//
       FLOWER_UNAUTHENTICATED_API: true
     volumes:
       - /volume1/docker/pyagents/flower:/data
-    depends_on:
-      - rabbitmq
     user: "1027:100"
-
-  qdrant:
-    image: qdrant/qdrant
-    hostname: qdrant
-    ports:
-      - "6333:6333"
-    volumes:
-      - /volume1/docker/pyagents/qdrant:/qdrant/storage
 
   backend:
     build: ./backend
     hostname: backend
     ports:
       - "9999:8000"
-    depends_on:
-      - rabbitmq
-      - qdrant
     environment:
-      CELERY_BROKER_URL: amqp://guest:guest@rabbitmq:5672//
+      CELERY_BROKER_URL: amqp://guest:guest@192.168.5.204:5672//
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
