--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
         source: nas
         target: /data/monitored
         volume:
-          subpath: data/documents/searchable
+          subpath: documents/searchable
 
 volumes:
   nas:
