--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "9999:8000"
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@192.168.5.204:5672//
+      QDRANT_HOST: 192.168.5.204
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
