--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -13,12 +13,14 @@ services:
       OPENAI_MODEL: 'gpt-oss-20b'
       QDRANT_HOST: 192.168.5.204
       USE_NNPACK: "0"
+      QDRANT_COLLECTION_NAME: ${QDRANT_COLLECTION_NAME:-documents}
+      CELERY_QUEUE_NAME: ${CELERY_QUEUE_NAME:-celery}
     volumes:
       - type: volume
         source: nas
         target: /data/monitored
         volume:
-          subpath: documents/searchable
+          subpath: ${NAS_SUBPATH:-documents/searchable}
 
 volumes:
   nas:
