--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -3,8 +3,8 @@ services:
     build: ./frontend
     hostname: frontend
     working_dir: /app
-    ports:
-      - "3000:3000"
+    ports:  
+      - "${FRONTEND_PORT:-3000}:3000"
     environment:
       VITE_API_BASE: ${VITE_API_BASE}
       VITE_FIREBASE_API_KEY: ${VITE_FIREBASE_API_KEY}
