--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: ./backend
     hostname: backend
     ports:
-      - "9999:8000"
+      - "${BACKEND_PORT:-9999}:8000"
     environment:
       CELERY_BROKER_URL: amqp://guest:guest@192.168.5.204:5672//
       QDRANT_HOST: 192.168.5.204
