Fix hardcoded strings and add env examples

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,11 @@
-OPENAI_API_BASE=http://192.168.5.203:1234/v1
+OPENAI_API_BASE=http://192.168.5.200:4000
 OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
 OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5-embedding
 OPENAI_EMBEDDING_DIMENSIONS=768
+DOCKER_BUILDKIT=0
+
+BACKEND_PORT=9998
+CELERY_QUEUE_NAME=southhaven
+NAS_SUBPATH=southhaven
+QDRANT_COLLECTION_NAME=southhaven
