--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,6 @@ VITE_FIREBASE_PROJECT_ID=fakeprojectid
 VITE_FIREBASE_STORAGE_BUCKET=fakestoragebucket
 VITE_FIREBASE_MESSAGING_SENDER_ID=fakesenderid
 VITE_FIREBASE_APP_ID=fakeappid
+DOCKER_BUILDKIT=0
+
+FRONTEND_PORT=3001
