--- a/docker-compose.proxy.yaml
+++ b/docker-compose.proxy.yaml
@@ -6,12 +6,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - type: volume
-        source: nas
-        target: /etc/nginx/nginx.conf
-        read_only: true
-        volume:
-          subpath: configs/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - type: volume
         source: nas
         target: /etc/nginx/certs
