Switch to nginx image

--- a/docker-compose.proxy.yaml
+++ b/docker-compose.proxy.yaml
@@ -1,12 +1,13 @@
 services:
   nginx:
-    image: nginx:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     hostname: nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - type: volume
         source: nas
         target: /etc/nginx/certs
