Update nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
         server_name apps.ethanturk.com;
 
         # SSL Configuration
-        ssl_certificate /etc/nginx/certs/chain.pem;
+        ssl_certificate /etc/nginx/certs/fullchain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
