--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -13,3 +13,4 @@ services:
       VITE_FIREBASE_STORAGE_BUCKET: ${VITE_FIREBASE_STORAGE_BUCKET}
       VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID}
       VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID}
+      VITE_BASE_PATH: ${VITE_BASE_PATH}
