--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
-VITE_API_BASE=http://localhost:8000
+VITE_API_BASE=https://apps.home.ethanturk.com:9998
 VITE_FIREBASE_API_KEY=fakekey
 VITE_FIREBASE_AUTH_DOMAIN=fakeauthdomain
 VITE_FIREBASE_PROJECT_ID=fakeprojectid
@@ -7,4 +7,4 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=fakesenderid
 VITE_FIREBASE_APP_ID=fakeappid
 
 FRONTEND_PORT=3001
-VITE_APP_BASE=/southhaven/
+VITE_BASE_PATH=/southhaven/
