--- a/nginx.conf
+++ b/nginx.conf
@@ -68,6 +68,7 @@ http {
         
         # WebSockets for Southhaven Backend
         location /southhaven/ws {
+            rewrite ^/southhaven(/.*) $1 break;
             proxy_pass http://backend_southhaven;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -106,6 +107,7 @@ http {
         
         # WebSockets for Demo Backend
         location /demo/ws {
+            rewrite ^/demo(/.*) $1 break;
             proxy_pass http://backend_demo;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
