Add backend rewrite rules

--- a/nginx.conf
+++ b/nginx.conf
@@ -59,6 +59,7 @@ http {
         
         # Backend API for Southhaven
         location /southhaven/agent/ {
+            rewrite ^/southhaven(/.*) $1 break;
             proxy_pass http://backend_southhaven;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -98,6 +99,7 @@ http {
 
         # Backend API for Demo
         location /demo/agent/ {            
+            rewrite ^/demo(/.*) $1 break;
             proxy_pass http://backend_demo;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
