--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     ports:
       - "${BACKEND_PORT:-9999}:8000"
     environment:
-      CELERY_BROKER_URL: amqp://guest:guest@192.168.5.204:5672//
-      QDRANT_HOST: 192.168.5.204
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
+      QDRANT_HOST: ${QDRANT_HOST:-192.168.5.204}
       USE_NNPACK: "0"
       QDRANT_COLLECTION_NAME: ${QDRANT_COLLECTION_NAME:-documents}
       CELERY_QUEUE_NAME: ${CELERY_QUEUE_NAME:-celery}
@@ -19,7 +19,7 @@ services:
         source: nas
         target: /data/monitored
         volume:
-          subpath: ${NAS_SUBPATH:-documents/searchable}
+          subpath: ${NAS_SUBPATH}
       - type: volume
         source: nas
         target: /app/service-account.json
