--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,9 +3,8 @@ OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
 OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5-embedding
 OPENAI_EMBEDDING_DIMENSIONS=768
-DOCKER_BUILDKIT=0
 
 BACKEND_PORT=9998
 CELERY_QUEUE_NAME=southhaven
-NAS_SUBPATH=southhaven
+NAS_SUBPATH=documents/southhaven
 QDRANT_COLLECTION_NAME=southhaven
