--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
-OPENAI_API_BASE=http://192.168.5.200:4000
+OPENAI_API_BASE=http://llms.home.ethanturk.com
 OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
-OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5-embedding
+OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5
 OPENAI_EMBEDDING_DIMENSIONS=768
 
 BACKEND_PORT=9998
-CELERY_QUEUE_NAME=southhaven
+CELERY_QUEUE_NAME=aidocsrch-southhaven
 NAS_SUBPATH=documents/southhaven
 QDRANT_COLLECTION_NAME=southhaven
