--- a/nginx.conf
+++ b/nginx.conf
@@ -59,7 +59,7 @@ http {
         
         # Backend API for Southhaven
         location /southhaven/agent/ {
-            rewrite ^/southhaven(/.*) $1 break;
+            rewrite ^/southhaven/(.*) /$1 break;
             proxy_pass http://backend_southhaven;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -69,7 +69,7 @@ http {
         
         # WebSockets for Southhaven Backend
         location /southhaven/ws {
-            rewrite ^/southhaven(/.*) $1 break;
+            rewrite ^/southhaven/(.*) /$1 break;
             proxy_pass http://backend_southhaven;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
