Add BASE_URL var

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@ OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
 OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5
 OPENAI_EMBEDDING_DIMENSIONS=768
+BASE_URL=192.168.5.204
 
 BACKEND_PORT=9998
 CELERY_QUEUE_NAME=aidocsrch-southhaven
