Fix config and compose

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,7 @@ OPENAI_MODEL=gpt-oss-20b
 OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5
 OPENAI_EMBEDDING_DIMENSIONS=768
 BASE_URL=192.168.5.204
+API_URL=http://192.168.5.204:9998
 
 BACKEND_PORT=9998
 CELERY_QUEUE_NAME=aidocsrch-southhaven
