--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0"
   },
