Add button to refresh document sets

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-OPENAI_API_BASE=http://llms.home.ethanturk.com
+OPENAI_API_BASE=https://llms.home.ethanturk.com
 OPENAI_API_KEY=lm-studio
 OPENAI_MODEL=gpt-oss-20b
 OPENAI_EMBEDDING_MODEL=text-embedding-nomic-embed-text-v1.5
