--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "${BACKEND_PORT}:8000"
     environment:
       BASE_URL: ${BASE_URL:-192.168.5.204}
-      CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@${BASE_URL}:5672//}
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://agent:agent_pass@${BASE_URL}:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
