--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -3,7 +3,7 @@ services:
     build: ./frontend
     hostname: frontend
     working_dir: /app
-    ports:  
+    ports:
       - "${FRONTEND_PORT:-3000}:3000"
     environment:
       VITE_API_BASE: ${VITE_API_BASE}
@@ -13,4 +13,4 @@ services:
       VITE_FIREBASE_STORAGE_BUCKET: ${VITE_FIREBASE_STORAGE_BUCKET}
       VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID}
       VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID}
-      VITE_BASE_PATH: /southhaven/
+      VITE_BASE_PATH: ${VITE_BASE_PATH}
