fix(nginx): remove rewrite rules causing redirect loops

--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
         server_name apps.ethanturk.com;
 
         # SSL Configuration
-        ssl_certificate /etc/nginx/certs/fullchain.pem;
+        ssl_certificate /etc/nginx/certs/chain.pem;
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -58,8 +58,10 @@ http {
         # --- Southhaven App ---
         
         # Backend API for Southhaven
+        # Matches /southhaven/agent/..., rewrites to /agent/... and sends to specific backend
         location /southhaven/agent/ {
-            rewrite ^/southhaven/(.*) /$1 break;
+            rewrite ^/southhaven(/.*) $1 break;
+            
             proxy_pass http://backend_southhaven;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -68,8 +70,10 @@ http {
         }
         
         # WebSockets for Southhaven Backend
+        # Matches /southhaven/ws, rewrites to /ws
         location /southhaven/ws {
-            rewrite ^/southhaven/(.*) /$1 break;
+            rewrite ^/southhaven(/.*) $1 break;
+
             proxy_pass http://backend_southhaven;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -81,7 +85,7 @@ http {
         }
 
         # Frontend for Southhaven
-        location /southhaven/ {            
+        location /southhaven/ {
             proxy_pass http://southhaven;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -92,14 +96,16 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            add_header X-Config-Debug "true";
         }
 
 
         # --- Demo App ---
 
         # Backend API for Demo
-        location /demo/agent/ {            
+        location /demo/agent/ {
             rewrite ^/demo(/.*) $1 break;
+            
             proxy_pass http://backend_demo;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -109,7 +115,8 @@ http {
         
         # WebSockets for Demo Backend
         location /demo/ws {
-            rewrite ^/demo(/.*) $1 break;
+             rewrite ^/demo(/.*) $1 break;
+
             proxy_pass http://backend_demo;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
