--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE=https://apps.ethanturk.com:9998
+VITE_API_BASE=https://apps.ethanturk.com/southhaven
 VITE_FIREBASE_API_KEY=fakekey
 VITE_FIREBASE_AUTH_DOMAIN=fakeauthdomain
 VITE_FIREBASE_PROJECT_ID=fakeprojectid
