--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,4 +29,4 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["uvicorn", "backend_app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "backend_app:app", "--host", "0.0.0.0", "--port", "8000", "--loop", "asyncio"]
