refactor: migrate vector database from Qdrant to PostgreSQL with pgvector

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,4 @@ BACKEND_PORT=9998
 CELERY_QUEUE_NAME=aidocsrch-southhaven
 NAS_SUBPATH=documents/southhaven
 QDRANT_COLLECTION_NAME=southhaven
+DATABASE_CONN_STRING=postgresql://user:pass@localhost:5432/db
