Fix compose files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       USE_NNPACK: "0"
       QDRANT_COLLECTION_NAME: ${QDRANT_COLLECTION_NAME:-documents}
       CELERY_QUEUE_NAME: ${CELERY_QUEUE_NAME:-celery}
+      DATABASE_CONN_STRING: ${DATABASE_CONN_STRING}
       API_URL: ${API_URL}
       GOOGLE_APPLICATION_CREDENTIALS: /app/service-account.json
     volumes:
