--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -6,9 +6,7 @@ services:
       resources:
         limits:
           memory: 10000M
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
+    network_mode: "host"
     environment:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
