--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
     build: ./backend
     hostname: backend
     ports:
-      - "${BACKEND_PORT}:8000"
+    network_mode: "host"
+    command: [ "uvicorn", "backend_app:app", "--host", "0.0.0.0", "--port", "${BACKEND_PORT:-8000}", "--loop", "asyncio" ]
+    # ports: - "${BACKEND_PORT}:8000" (Removed for host mode)
     environment:
       BASE_URL: ${BASE_URL:-192.168.5.204}
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@${BASE_URL}:5672//}
@@ -19,9 +21,6 @@ services:
       DATABASE_CONN_STRING: ${DATABASE_CONN_STRING}
       API_URL: ${API_URL}
       GOOGLE_APPLICATION_CREDENTIALS: /app/service-account.json
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
     volumes:
       - type: volume
         source: nas
