Swap to SUPABASE APIs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,4 +10,5 @@ BACKEND_PORT=9998
 CELERY_QUEUE_NAME=aidocsrch-southhaven
 NAS_SUBPATH=documents/southhaven
 QDRANT_COLLECTION_NAME=southhaven
-DATABASE_CONN_STRING=postgresql://user:pass@localhost:5432/db
+SUPABASE_URL=someurl
+SUPABASE_KEY=somekey
