--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -3,10 +3,9 @@ services:
     build: ./backend
     command: celery -A async_tasks worker --loglevel=info --concurrency=4
     deploy:
-      resources:
-        limits:
-          memory: 10000M
-    network_mode: "host"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     environment:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
@@ -18,9 +17,10 @@ services:
       USE_NNPACK: "0"
       QDRANT_COLLECTION_NAME: ${QDRANT_COLLECTION_NAME:-documents}
       CELERY_QUEUE_NAME: ${CELERY_QUEUE_NAME:-celery}
-      DATABASE_CONN_STRING: ${DATABASE_CONN_STRING}
       GOOGLE_APPLICATION_CREDENTIALS: /app/service-account.json
       API_URL: ${API_URL}
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_KEY: ${SUPABASE_KEY}
     volumes:
       - type: volume
         source: nas
