--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 services:
   backend:
     build: ./backend
-    hostname: backend
-    network_mode: "host"
-    command: [ "uvicorn", "backend_app:app", "--host", "0.0.0.0", "--port", "${BACKEND_PORT:-8000}", "--loop", "asyncio" ]
+    ports:
+      - "${BACKEND_PORT}:8000"
+    command: [ "uvicorn", "backend_app:app", "--host", "0.0.0.0", "--port", "8000", "--loop", "asyncio" ]
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     environment:
       BASE_URL: ${BASE_URL:-192.168.5.204}
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@${BASE_URL}:5672//}
@@ -16,9 +19,10 @@ services:
       USE_NNPACK: "0"
       QDRANT_COLLECTION_NAME: ${QDRANT_COLLECTION_NAME:-documents}
       CELERY_QUEUE_NAME: ${CELERY_QUEUE_NAME:-celery}
-      DATABASE_CONN_STRING: ${DATABASE_CONN_STRING}
       API_URL: ${API_URL}
       GOOGLE_APPLICATION_CREDENTIALS: /app/service-account.json
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_KEY: ${SUPABASE_KEY}
     volumes:
       - type: volume
         source: nas
