--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -3,9 +3,9 @@ services:
     build: ./backend
     command: celery -A async_tasks worker --loglevel=info --concurrency=4
     deploy:
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
+      resources:
+        limits:
+          memory: 10000M
     environment:
       CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
