--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,9 @@ NAS_SUBPATH=documents/southhaven
 QDRANT_COLLECTION_NAME=southhaven
 SUPABASE_URL=someurl
 SUPABASE_KEY=somekey
+
+# Security Configuration
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://apps.ethanturk.com
+MAX_FILE_SIZE=100000000
+MAX_FILES_PER_UPLOAD=10
+FIREBASE_REQUIRED=false
