--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,29 +18,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           cd backend
-          pip install -r requirements.txt
-          pip install ruff black mypy
-      
+          pip3 install -r requirements.txt
+          pip3 install ruff black mypy
+
       - name: Run Ruff linter
         run: |
           cd backend
           ruff check .
-      
+
       - name: Check formatting
         run: |
           cd backend
           black --check .
-      
+
       - name: Run type checks
         run: |
           cd backend
@@ -51,24 +51,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
-      
+
       - name: Install dependencies
         run: |
           cd frontend
           npm ci
-      
+
       - name: Run linter
         run: |
           cd frontend
           npm run lint
-      
+
       - name: Run tests
         run: |
           cd frontend
@@ -80,28 +80,28 @@ jobs:
     needs: [backend-lint, frontend-lint]
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           cd backend
-          pip install -r requirements.txt
-      
+          pip3 install -r requirements.txt
+
       - name: Run unit tests
         run: |
           cd backend
           pytest -m unit -v
-      
+
       - name: Generate coverage
         run: |
           cd backend
           pytest -m unit --cov=. --cov-report=xml --cov-report=term
-      
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
@@ -115,22 +115,22 @@ jobs:
     needs: [unit-tests]
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           cd backend
-          pip install -r requirements.txt
-      
+          pip3 install -r requirements.txt
+
       - name: Start test containers
         run: |
           docker-compose -f docker-compose.test.yml up -d
-      
+
       - name: Wait for database to be ready
         run: |
           echo "Waiting for PostgreSQL..."
@@ -145,13 +145,13 @@ jobs:
             echo "Attempt $attempt of $max_attempts..."
             sleep 2
           done
-          
+
           if [ $attempt -eq $max_attempts ]; then
             echo "PostgreSQL did not become ready"
             docker-compose -f docker-compose.test.yml logs test-db
             exit 1
           fi
-      
+
       - name: Wait for RabbitMQ to be ready
         run: |
           echo "Waiting for RabbitMQ..."
@@ -166,28 +166,28 @@ jobs:
             echo "Attempt $attempt of $max_attempts..."
             sleep 2
           done
-          
+
           if [ $attempt -eq $max_attempts ]; then
             echo "RabbitMQ did not become ready"
             docker-compose -f docker-compose.test.yml logs test-rabbitmq
             exit 1
           fi
-      
+
       - name: Show running containers
         run: |
           docker ps
           echo "---"
           docker-compose -f docker-compose.test.yml ps
-      
+
       - name: Run integration tests
         env:
           USE_TEST_CONTAINERS: "true"
-          DATABASE_CONN_STRING: "postgresql://test_user:test_pass@localhost:5433/test_db"
-          CELERY_BROKER_URL: "amqp://test_user:test_pass@localhost:5673//"
+          DATABASE_CONN_STRING: "postgresql://test_user:test_pass@localhost:5433/test_db"  # pragma: allowlist secret
+          CELERY_BROKER_URL: "amqp://test_user:test_pass@localhost:5673//"  # pragma: allowlist secret
         run: |
           cd backend
           pytest -m integration -v --tb=short
-      
+
       - name: Upload integration test logs
         if: failure()
         uses: actions/upload-artifact@v4
@@ -196,7 +196,7 @@ jobs:
           path: |
             backend/pytest-logs.txt
             backend/htmlcov/
-      
+
       - name: Stop containers and cleanup
         if: always()
         run: |
@@ -208,18 +208,18 @@ jobs:
     needs: [integration-tests]
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
       - name: Build backend image
         run: |
           docker build -t backend-test ./backend
-      
+
       - name: Build worker image
         run: |
           docker build -t worker-test ./backend
-      
+
       - name: Build frontend image
         run: |
           docker build -t frontend-test ./frontend
@@ -229,27 +229,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      
+
       - name: Install dependencies
         run: |
-          pip install bandit safety
-      
+          pip3 install bandit safety
+
       - name: Run security checks with bandit
         run: |
           bandit -r backend/ -f json -o bandit-report.json || true
-      
+
       - name: Upload bandit report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: bandit-report
           path: bandit-report.json
-      
+
       - name: Check dependencies for vulnerabilities
         run: |
           cd backend
@@ -261,35 +261,35 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      
+
       - name: Install dependencies
         run: |
           cd backend
-          pip install -r requirements.txt
-      
+          pip3 install -r requirements.txt
+
       - name: Start test containers
         run: |
           docker-compose -f docker-compose.test.yml up -d
-      
+
       - name: Wait for services
         run: sleep 15
-      
+
       - name: Run all tests
         env:
           USE_TEST_CONTAINERS: "true"
         run: |
           ./run_tests.sh --all --coverage
-      
+
       - name: Upload coverage
         uses: codecov/codecov-action@v4
         with:
           files: ./backend/coverage.xml
-      
+
       - name: Stop containers and cleanup
         if: always()
         run: |
@@ -333,24 +333,24 @@ jobs:
             const integrationTests = '${{ needs.integration-tests.result }}';
             const frontendLint = '${{ needs.frontend-lint.result }}';
             const backendLint = '${{ needs.backend-lint.result }}';
-            
+
             const unitIcon = unitTests === 'success' ? '✅' : '❌';
             const integrationIcon = integrationTests === 'success' ? '✅' : '❌';
             const frontendIcon = frontendLint === 'success' ? '✅' : '❌';
             const backendIcon = backendLint === 'success' ? '✅' : '❌';
-            
+
             const comment = `## 🧪 Test Results
-            
+
             | Test Suite | Status |
             |------------|--------|
             | Backend Lint | ${backendIcon} ${backendLint} |
             | Frontend Lint | ${frontendIcon} ${frontendLint} |
             | Unit Tests | ${unitIcon} ${unitTests} |
             | Integration Tests | ${integrationIcon} ${integrationTests} |
-            
+
             ---
             *Commit: ${context.sha.slice(0, 7)}*`;
-            
+
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
