--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,12 +31,12 @@ repos:
         files: ^backend/
 
   # Python linting and code quality (backend)
-  # - repo: https://github.com/astral-sh/ruff-pre-commit
-  #   rev: v0.1.15
-  #   hooks:
-  #     - id: ruff
-  #       args: [--fix, --exit-non-zero-on-fix]
-  #       files: ^backend/
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.15
+    hooks:
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+        files: ^backend/
 
   # Type checking (backend) - optional, can be slow
   # Uncomment to enable mypy in pre-commit
@@ -49,12 +49,12 @@ repos:
   #       files: ^backend/
 
   # Security scanning (backend) - Disabled temporarily due to config issues
-  # - repo: https://github.com/PyCQA/bandit
-  #   rev: 1.7.6
-  #   hooks:
-  #     - id: bandit
-  #       args: ['-c', 'backend/.bandit', '-r', 'backend/']
-  #       files: ^backend/
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.6
+    hooks:
+      - id: bandit
+        args: ['-c', 'backend/.bandit', '-r', 'backend/']
+        files: ^backend/
 
   # Secrets detection (all)
   - repo: https://github.com/Yelp/detect-secrets
