--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,38 @@ jobs:
           flags: unit-tests
           name: codecov-unit-tests
 
+  # Frontend linting and tests
+  frontend-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Run ESLint
+        run: |
+          cd frontend
+          npm run lint
+
+      - name: Run tests
+        run: |
+          cd frontend
+          npm test -- --run
+
   # Integration tests (with containers)
   integration-tests:
     runs-on: ubuntu-latest
-    needs: [backend-lint]
+    needs: [backend-lint, frontend-lint]
     steps:
       - uses: actions/checkout@v4
 
