--- a/docker-compose.worker.yml
+++ b/docker-compose.worker.yml
@@ -7,7 +7,7 @@ services:
         limits:
           memory: 10000M
     environment:
-      CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}
+      CELERY_BROKER_URL: ${CELERY_BROKER_URL:-amqp://guest:guest@192.168.5.204:5672//}  # pragma: allowlist secret
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       OPENAI_API_BASE: ${OPENAI_API_BASE}
       OPENAI_MODEL: ${OPENAI_MODEL}
