--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -23,7 +23,7 @@ spec:
         - name: RUN_WORKER_EMBEDDED
           value: "true"
         - name: CELERY_BROKER_URL
-          value: "amqp://guest:guest@rabbitmq:5672//"
+          value: "amqp://guest:guest@rabbitmq:5672//"  # pragma: allowlist secret
         - name: QDRANT_HOST
           value: "qdrant"
         - name: MONITORED_DIR
