Setup more Azure

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,10 +8,13 @@ API_URL=http://192.168.5.204:9998
 
 BACKEND_PORT=9998
 CELERY_QUEUE_NAME=aidocsrch-southhaven
-NAS_SUBPATH=documents/southhaven
 QDRANT_COLLECTION_NAME=southhaven
-SUPABASE_URL=someurl
-SUPABASE_KEY=somekey
+
+# Azure Storage Configuration (Private container, backend proxy only)
+# Get connection string from Azure Portal -> Storage Account -> Access Keys -> Connection string
+AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=aidocsrch;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net
+AZURE_STORAGE_CONTAINER_NAME=documents
+AZURE_STORAGE_ACCOUNT_NAME=aidocsrch
 
 # Security Configuration
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://apps.ethanturk.com
