--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,6 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://apps.ethantu
 MAX_FILE_SIZE=100000000
 MAX_FILES_PER_UPLOAD=10
 FIREBASE_REQUIRED=false
+
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-anon-or-service-role-key
