--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -14,3 +14,12 @@ services:
       VITE_FIREBASE_MESSAGING_SENDER_ID: ${VITE_FIREBASE_MESSAGING_SENDER_ID}
       VITE_FIREBASE_APP_ID: ${VITE_FIREBASE_APP_ID}
       VITE_BASE_PATH: ${VITE_BASE_PATH}
+      # Increase Node memory limit to prevent esbuild crashes
+      NODE_OPTIONS: "--max-old-space-size=4096"
+    # Resource limits to prevent container from using too much memory
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+        reservations:
+          memory: 512M
