--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -11,11 +11,13 @@ services:
     environment:
       - TZ=America/Chicago
     volumes:
-      # Traefik configuration files (bind mounts)
-      - ./traefik/traefik.yml:/etc/traefik/traefik.yml:ro
-      - ./traefik/dynamic:/etc/traefik/dynamic:ro
       # Traefik data (named volume for certificates and logs)
       - traefik_data:/data
+    configs:
+      - source: traefik_config
+        target: /etc/traefik/traefik.yml
+      - source: traefik_dynamic
+        target: /etc/traefik/dynamic/routes.yml
     labels:
       # Enable Traefik dashboard
       - "traefik.enable=true"
@@ -39,3 +41,9 @@ services:
 volumes:
   traefik_data:
     name: traefik_data
+
+configs:
+  traefik_config:
+    file: ./traefik/traefik.yml
+  traefik_dynamic:
+    file: ./traefik/dynamic/routes.yml
